--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.5.8",
+    "@nuxtjs/tailwindcss": "^6.12.2",
     "@pinia/nuxt": "^0.5.5",
     "@types/axios": "^0.9.36",
     "axios": "^1.7.7",
@@ -17,5 +19,8 @@
     "pinia": "^2.2.4",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.13"
   }
 }
