--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pinia/nuxt": "^0.5.5",
     "@types/axios": "^0.9.36",
     "axios": "^1.7.7",
+    "mongoose": "^8.7.3",
     "nuxt": "^3.13.2",
     "pinia": "^2.2.4",
     "vue": "latest",
