--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,27 +13,15 @@ services:
     volumes:
       - mongodb_data:/data/db
 
-  # nuxt:
-  #   image: node:latest
-  #   container_name: nuxt_app
-  #   restart: always
-  #   working_dir: /app
-  #   volumes:
-  #     - ./nuxt-app:/app
-  #   command: npm run start
-  #   ports:
-  #     - "3000:3000"
-  #
-  # nginx:
-  #   image: nginx:latest
-  #   container_name: nginx
-  #   restart: always
-  #   ports:
-  #     - "80:80"
-  #   volumes:
-  #     - ./nginx.conf:/etc/nginx/conf.d/default.conf
-  #   depends_on:
-  #     - nuxt
+  nuxt:
+    build: .
+    container_name: nuxt_app
+    restart: always
+    working_dir: /app
+    environment:
+      MONGODB_URI: "mongodb://root:example@mongodb:27017"
+    ports:
+      - "3000:3000"
 
 volumes:
   mongodb_data:
